scss/core/helpers/resources/flex-idx-search-filter.scss
/* ... */
				//

				// PERMALINK
					.ib-pipermalink {
						overflow: hidden;
						position: absolute;
						z-index: 4;
						top: 0;
						left: 0;
						width: 100%;
						height: 100%;

						span {
							position: absolute;
							top: -500px;
							left: 0;
						}
					}
				//
			//

			// NAVIGATION

				.ib-cpagination {
					margin-bottom: 15px;
					@include flexpa();
					justify-content: flex-end;
					padding: 0 10px;

					@media screen and (min-width: 480px) {
						font-size: 1.1em;
					}

					
				}

				// para tema LG
					//.lg-theme {
					.ib-cpagination {
						@media screen and (max-width: 767px) {
							//margin-bottom: 115px;
							padding-bottom: 60px;
						}
					}

					.lg-theme {
						.ib-cpagination {
							@media screen and (max-width: 767px) {
								padding-bottom: 100px;
							}
						}
					}
					//}
				//

				.ib-wpagination {
					font-size: .8em;
					@include flexpa();
					height: 30px;

					@media screen and (min-width: 480px) {
						height: 40px;
					}
				}

				.ib-pagn, .ib-pagprev, .ib-pagnext, .ib-plitem, .ib-pagfirst, .ib-paglast {
					border: 1px solid #E5E5E5;
				}

				.ib-pagnext, .ib-pagprev {
					transition: all .3s linear;

					&:before {
						content: "\61";
						@include ibfont();
						@include flexpa();
						position: absolute;
						top:0;
						left: 0;
						bottom: 0;
						right: 0;
						margin: auto;
						color: $colorp;
						transition: all .3s linear;
					}

					&:hover {
						background-color: $colorp;
						border-top-color: $colorp;
						border-bottom-color: $colorp;

						&:before {
							color :#fff;
						}
					}
				}

				.ib-pagprev {
					transform: rotate(90deg);
				}

				.ib-pagnext {
					transform: rotate(-90deg);
					//border-left: 0;
				}

				.ib-pagn {
					height: 100%;
					padding:0 10px;
					@include flexpa();
					border-right: 0;
					text-align: center;
				}

				.ib-paglinks {
					@include flexpa();
					height: 100%;
				}

				.ib-paggo,.ib-plitem {
					min-width: 30px;
					@include flexpa();
					height: 100%;

					@media screen and (min-width: 480px) {
						min-width: 40px;
					}
				}

				.ib-plitem {
					border-left: 0;
					transition: all .3s linear;
					color: $colorp !important;

					&:hover, &.ib-plitem-active {
						background-color: $colorp;
						border-top-color: $colorp;
						border-bottom-color: $colorp;
						color: #fff !important;
					}

					&:last-child {
						border-right: 0;
					}
				}

				.ib-paggo {
					height: 100%;
					
					@include flexpa();
					position: relative;
					overflow: hidden;

					span {
						position: absolute;
						top:-200px;
						left: 0;
					}
				}

				.ib-pagfirst, .ib-paglast {
					@media screen and (max-width: 479px) {
						display: none;
					}

					transition: all .3s linear;

					&:before {
						content: "\6a";
						@include ibfont();
						@include flexpa();
						color: $colorp;
						transition: all .3s linear;
						font-size: 1.6em
					}

					&:hover {
						background-color: $colorp;
						border-top-color: $colorp;
						border-bottom-color: $colorp;

						&:before {
							color: #fff;

						}
					}

				}

				.ib-pagfirst {
					border-right: 0;
				}

				.ib-paglast {
					border-left: 0;

					&:before {
						transform: rotateY(180deg);
					}
				}
/* ... */

